--- a/gallery.html
+++ b/gallery.html
@@ -1,20 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Gallery</title>
+        <link rel="stylesheet" href="css/html5reset.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
 
     <body>
         <header>
             <nav>
-
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
+                    <li><a href="aboutme.html">About Me</a></li>
+                    <li><a href="philosophy.html">Philosophy</a></li>
+                </ul>
             </nav>
         </header>
 
         <main>
-            <p>
-
-            </p>
+            <h1>A few photos!</h1>
+  
             <figure>
                 <img src="images/blue_skies_apartment_building.jpeg" width="500" alt="apartment building with blue skies"/>
                 <figcaption>Here's a minimalist apartment building with a beautiful blue sky background!</figcaption>
