--- a/index.html
+++ b/index.html
@@ -1,17 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Home Page</title>
+        <link rel="stylesheet" href="css/html5reset.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
 
     <body>
+     <div class="skip"><a href="#main">Skip to Main Content</a></div>
         <header>
             <nav>
-
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
+                    <li><a href="aboutme.html">About Me</a></li>
+                    <li><a href="philosophy.html">Philosophy</a></li>
+                </ul>
             </nav>
         </header>
 
-        <main>
+        <main id="main">
+            <h1>Architecture & design</h1>
+
             <p>
                 This site is a compilation of a few of my favorite interiors and exteriors, with a focus on architecture that is both modern and stylish. 
                 I have had a passion for interior design and architecture for quite some time,
