--- a/philosophy.html
+++ b/philosophy.html
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Philosophy</title>
+        <link rel="stylesheet" href="css/html5reset.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
 
     <body>
         <header>
             <nav>
-
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
+                    <li><a href="aboutme.html">About Me</a></li>
+                    <li><a href="philosophy.html">Philosophy</a></li>
+                </ul>
             </nav>
         </header>
 
         <main>
+            <h1>A little about minimalism & mid-Century modernism</h1>
+
             <p>
                 Minimalism came about as a response of sorts to mid-century modernism. 
                 The chief values of minimalism are minimal complication and maximal utility.
