--- a/aboutme.html
+++ b/aboutme.html
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>About Me</title>
+        <link rel="stylesheet" href="css/html5reset.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
 
     <body>
         <header>
             <nav>
-
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
+                    <li><a href="aboutme.html">About Me</a></li>
+                    <li><a href="philosophy.html">Philosophy</a></li>
+                </ul>
             </nav>
         </header>
 
         <main>
+            <h1>My story</h1>
+
             <p>
                 I've been interested in both minimalism and mid-century modernism for a long time, but I have been interested in the arts for even longer!
                 My mother majored in art history, and I've grown up taking trips to the Ann Arbor Art Museum and other wonderful venues.
