--- a/aboutme.html
+++ b/aboutme.html
@@ -6,6 +6,7 @@
         <title>About Me</title>
         <link rel="stylesheet" href="css/html5reset.css">
         <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">>
     </head>
 
     <body>
@@ -23,27 +24,32 @@
         <main>
             <h1>My story</h1>
 
-            <p>
+            <p id="p3">
                 I've been interested in both minimalism and mid-century modernism for a long time, but I have been interested in the arts for even longer!
                 My mother majored in art history, and I've grown up taking trips to the Ann Arbor Art Museum and other wonderful venues.
                 During those trips, I've learned a great deal about everything from paintings from the Renaissance to post-modern video art from the past decade. 
             </p>
 
+     
+          
+        </main>
+
+        <aside id="aside3">
             <p>
-                While I may not have a formal education in the arts, my background has also uniquely prepared me to pursue my interests!
-                I have a Bachelor's degree in psychology from Grand Valley State University,
-                and I am currently a second-year Master's student in the MSI program. During my time as a student at SI,
-                I've had the opportunity to learn so much about graphic design, visual symbology, and other topics that have
-                greatly broadened my artistic horizons!
+            While I may not have a formal education in the arts, my background has also uniquely prepared me to pursue my interests!
+            I have a Bachelor's degree in psychology from Grand Valley State University,
+            and I am currently a second-year Master's student in the MSI program. During my time as a student at SI,
+            I've had the opportunity to learn so much about graphic design, visual symbology, and other topics that have
+            greatly broadened my artistic horizons!
             </p>
+
             <figure>
                 <img src="images/modern_red_stairway_sky.jpeg" width="500" alt="Red stairway outside"/>
                 <figcaption>Red stairway with sky background</figcaption>
             </figure>
-        </main>
-
+        </aside>
         <footer>
-
+            <i style="font-size:24px" class="fa">&#xf0c9;</i>
         </footer>
     </body>
 </html>
