--- a/gallery.html
+++ b/gallery.html
@@ -6,6 +6,7 @@
         <title>Gallery</title>
         <link rel="stylesheet" href="css/html5reset.css">
         <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">>
     </head>
 
     <body>
@@ -22,43 +23,45 @@
 
         <main>
             <h1>A few photos!</h1>
-  
-            <figure>
-                <img src="images/blue_skies_apartment_building.jpeg" width="500" alt="apartment building with blue skies"/>
-                <figcaption>Here's a minimalist apartment building with a beautiful blue sky background!</figcaption>
-            </figure>
-            <figure>
-                <img src="images/couch_wood_background.jpeg" width="500" alt="Plush couch with patterned background"/>
-                <figcaption>Looks like a perfect place to chill, with some Mid-century modern touches!</figcaption>
-            </figure>
-            <figure>
-                <img src="images/modern_apartments.jpeg" width="500" alt="Modern apartment building blocks"/>
-                <figcaption>Here's some minimalist apartment buildings with a wide-open walking path.</figcaption>
-            </figure>
-            <figure>
-                <img src="images/modern_living_room.jpeg" width="500" alt="Living room with modern furnishings"/>
-                <figcaption>And here's my ideal living room! Needs more bookcases, though.</figcaption>
-            </figure>
-            <figure>
-                <img src="images/modern_office_wood.jpeg" width="500" alt="Office with wood decor"/>
-                <figcaption>This office has a nice mix of Mid-century(the lamp off to the left) and minimalist touches(the light bars to the right).</figcaption>
-            </figure>
-            <figure>
-                <img src="images/modern_staircase.jpeg" width="500" alt="Modern style living room"/>
-                <figcaption>This staircase is probably a bit more Mid-century modern than minimalist, but there are elements of both here!</figcaption>
-            </figure>
-            <figure>
-                <img src="images/modern_white_house_w_pool.jpeg" width="500" alt="White house with pool"/>
-                <figcaption>Minimalism with a bright sunshine accent!</figcaption>
-            </figure>
-            <figure>
-                <img src="images/orange_building_courtyard.jpeg" width="500" alt="Building courtyard sky view"/>
-                <figcaption>This courtyard screams Mid-century modern, with the brick walls and the vintage window frames.</figcaption>
-            </figure>
+            <section id="gallery">
+                <figure id="im1">
+                    <img src="images/blue_skies_apartment_building.jpeg" width="500" alt="apartment building with blue skies"/>
+                    <figcaption>Here's a minimalist apartment building with a beautiful blue sky background!</figcaption>
+                </figure>
+                <figure id="im2">
+                    <img src="images/couch_wood_background.jpeg" width="500" alt="Plush couch with patterned background"/>
+                    <figcaption>Looks like a perfect place to chill, with some Mid-century modern touches!</figcaption>
+                </figure>
+                <figure id="im3">
+                    <img src="images/modern_apartments.jpeg" width="500" alt="Modern apartment building blocks"/>
+                    <figcaption>Here's some minimalist apartment buildings with a wide-open walking path.</figcaption>
+                </figure>
+                <figure id="im4">
+                    <img src="images/modern_living_room.jpeg" width="500" alt="Living room with modern furnishings"/>
+                    <figcaption>And here's my ideal living room! Needs more bookcases, though.</figcaption>
+                </figure>
+                <figure id="im5">
+                    <img src="images/modern_office_wood.jpeg" width="500" alt="Office with wood decor"/>
+                    <figcaption>This office has a nice mix of Mid-century(the lamp off to the left) and minimalist touches(the light bars to the right).</figcaption>
+                </figure>
+                <figure id="im6">
+                    <img src="images/modern_staircase.jpeg" width="500" alt="Modern style living room"/>
+                    <figcaption>This staircase is probably a bit more Mid-century modern than minimalist, but there are elements of both here!</figcaption>
+                </figure>
+                <figure id="im7">
+                    <img src="images/modern_white_house_w_pool.jpeg" width="500" alt="White house with pool"/>
+                    <figcaption>Minimalism with a bright sunshine accent!</figcaption>
+                </figure>
+                <figure id="im8">
+                    <img src="images/orange_building_courtyard.jpeg" width="500" alt="Building courtyard sky view"/>
+                    <figcaption>This courtyard screams Mid-century modern, with the brick walls and the vintage window frames.</figcaption>
+                </figure>
+            </section>    
         </main>
 
+    
         <footer>
-
+            <i style="font-size:24px" class="fa">&#xf0c9;</i>
         </footer>
     </body>
 </html>
