--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <title>Home Page</title>
         <link rel="stylesheet" href="css/html5reset.css">
         <link rel="stylesheet" href="css/style.css">
+        <link href='https://fonts.googleapis.com/css?family=Roboto Mono' rel='stylesheet'>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 
     <body>
@@ -17,6 +20,7 @@
                     <li><a href="gallery.html">Gallery</a></li>
                     <li><a href="aboutme.html">About Me</a></li>
                     <li><a href="philosophy.html">Philosophy</a></li>
+                    
                 </ul>
             </nav>
         </header>
@@ -24,27 +28,34 @@
         <main id="main">
             <h1>Architecture & design</h1>
 
-            <p>
+            <p id="p1bleh">
                 This site is a compilation of a few of my favorite interiors and exteriors, with a focus on architecture that is both modern and stylish. 
                 I have had a passion for interior design and architecture for quite some time,
                 so I look forward to using this site as a space for compiling some of my favorite designs and spaces.
                 Over time, I would like to develop this site to reflect similar colors and shapes as the modernist designs that can be found here.
             </p>
 
+
+   
+        </main>
+
+        <aside id="aside1">
             <p>
-                These photos primarily reflect designs that are either minimalist or mid-century modern.
+                    These photos primarily reflect designs that are either minimalist or mid-century modern.
                 Minimalism is an artistic philosophy that holds the adage 'less is more' as the guiding principle.
                 Mid-century modernism is reflective of earlier trends in American design from the 40s to the late 60s
                 that emphasize sleek lines, unification of form and function, and careful graftsmanship. 
             </p>
+
+
             <figure>
                 <img src="images/modern_wood_kitchen.jpeg" width="500" alt="Kitchen with wood trim"/>
                 <figcaption>Modern wood kitchen</figcaption>
             </figure>
-        </main>
+        </aside>
 
         <footer>
-
+            <i style="font-size:24px" class="fa">&#xf0c9;</i>
         </footer>
     </body>
 </html>
