--- a/philosophy.html
+++ b/philosophy.html
@@ -6,6 +6,7 @@
         <title>Philosophy</title>
         <link rel="stylesheet" href="css/html5reset.css">
         <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">>
     </head>
 
     <body>
@@ -23,26 +24,32 @@
         <main>
             <h1>A little about minimalism & mid-Century modernism</h1>
 
-            <p>
+            <p id="p2">
                 Minimalism came about as a response of sorts to mid-century modernism. 
                 The chief values of minimalism are minimal complication and maximal utility.
                 Minimalism is an accepted and widely known design philosophy that is a dominant force in design today.
             </p>
 
+       
+      
+        </main>
+
+        <aside id="aside2">
             <p>
-                But in order to understand minimalism, we must return to study the philosophy of Mid-century modernism.
-                This movement was first begun shortly after the Second World War, and lasted throughout the Sixties.
-                In keeping with the Space Age and the aesthetics of the time, Mid-century modernism 
-                involves sleek and clear lines, with clear functionality. 
+            But in order to understand minimalism, we must return to study the philosophy of Mid-century modernism.
+            This movement was first begun shortly after the Second World War, and lasted throughout the Sixties.
+            In keeping with the Space Age and the aesthetics of the time, Mid-century modernism 
+            involves sleek and clear lines, with clear functionality. 
             </p>
+
             <figure>
                 <img src="images/modern_estate_mountains.jpeg" width="500" alt="Mountain estate with pool"/>
                 <figcaption>Modern estate in the mountains</figcaption>
             </figure>
-        </main>
+        </aside>
 
         <footer>
-
+            <i style="font-size:24px" class="fa">&#xf0c9;</i>
         </footer>
     </body>
 </html>
