--- a/aboutme.html
+++ b/aboutme.html
@@ -15,7 +15,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="gallery.html">Gallery</a></li>
-                    <li><a href="aboutme.html">About Me</a></li>
+                    <li><a href="aboutme.html" class="current">About Me</a></li>
                     <li><a href="philosophy.html">Philosophy</a></li>
                 </ul>
             </nav>
