--- a/gallery.html
+++ b/gallery.html
@@ -14,7 +14,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="gallery.html">Gallery</a></li>
+                    <li><a href="gallery.html" class="current">Gallery</a></li>
                     <li><a href="aboutme.html">About Me</a></li>
                     <li><a href="philosophy.html">Philosophy</a></li>
                 </ul>
