--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <header>
             <nav>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="index.html" class="current">Home</a></li>
                     <li><a href="gallery.html">Gallery</a></li>
                     <li><a href="aboutme.html">About Me</a></li>
                     <li><a href="philosophy.html">Philosophy</a></li>
