--- a/philosophy.html
+++ b/philosophy.html
@@ -16,7 +16,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="gallery.html">Gallery</a></li>
                     <li><a href="aboutme.html">About Me</a></li>
-                    <li><a href="philosophy.html">Philosophy</a></li>
+                    <li><a href="philosophy.html" class="current">Philosophy</a></li>
                 </ul>
             </nav>
         </header>
