--- a/aboutme.html
+++ b/aboutme.html
@@ -20,6 +20,7 @@
     </head>
 
     <body>
+     <div class="skip"><a href="#main">Skip to Main Content</a></div>
         <header>
             <nav>
                 <ul>
