--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <link rel="icon" type="image/png" href="images/favicon2.png">
         <link rel="stylesheet" href="css/html5reset.css">
         <link rel="stylesheet" href="css/style.css">
-        <link href='https://fonts.googleapis.com/css?family=RobotoMono' rel='stylesheet'>
+        <link href='https://fonts.googleapis.com/css?family=Roboto+Mono' rel='stylesheet'>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
