--- a/aboutme.html
+++ b/aboutme.html
@@ -33,7 +33,7 @@
             </nav>
         </header>
 
-        <main>
+        <main id="main">
             <h1>My story</h1>
 
             <p id="p3">
