--- a/philosophy.html
+++ b/philosophy.html
@@ -33,7 +33,7 @@
             </nav>
         </header>
 
-        <main>
+        <main id="main">
             <h1>A little about minimalism & mid-Century modernism</h1>
 
             <p id="p2">
