--- a/gallery.html
+++ b/gallery.html
@@ -33,7 +33,7 @@
             </nav>
         </header>
 
-        <main>
+        <main id="main">
             <h1>A few photos!</h1>
             <section id="gallery">
                 <figure id="im1">
